#5 When someone wins, highlight the three squares that caused the win: Added global constant, Refactored code.

--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,9 @@ ol, ul {
   border: solid black;
   background-color: cornflowerblue;
 }
+
+
+.winning {
+  background-color: forestgreen;
+  color: white;
+}
